--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -16,6 +16,6 @@
   </p>
 <% end %>
 </section>
-<%= content_tag :div, "data-#{params[:status]}" => @posts.size do %>
-  Number of <%= params[:status] %> results shown: <%= @posts.size if @posts %>
+<%= content_tag :div, "data-#{@data_status}" => @posts.size do %>
+  Number of <%= @data_status %> results shown: <%= @posts.size if @posts %>
 <% end -%>
